--- a/Second Year/Second Semester/Web Programming/1/index.html
+++ b/Second Year/Second Semester/Web Programming/1/index.html
@@ -1,2 +1,108 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Website</title>
+  </head>
+  <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="https://google.ro" target="_blank"> The place where you most likely came from (Gugăl). </a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h1>Welcome to My Website. I made this because I had to do my homework for HTML.</h1>
+            <p> And I was bored. Anyway, here's an image of the process: </p>
+            <br/>
+            <img src="adam-smasher.webp" width="300" height="200" />
+        </article>
+        
+        <hr/>
 
+        <section>
+            <b> Here is a table I made to test how tables work: </b>
+            <table>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Age</th>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <td>Jane</td>
+                    <td>Doe</td>
+                    <td>22</td>
+                </tr>
+                <tr>
+                    <td>Steve</td>
+                    <td>Smith</td>
+                    <td>32</td>
+                </tr>
+            </table>
+        </section>
+
+        <aside>
+            <div>
+                <p>Wait, this is my website, so I can put whatever I want here. I'm going to put a list of things I like.</p>
+                <ol>
+                    <li>C++.</li>
+                    <li>Just C++.</li>
+                    <li>Maybe C.</li>
+                    <li>Ok, C, too.</li>
+                </ol>
+            </div>
+            
+            <div>
+                <p> I also like eurobeat too, so have a video with a popular character perform one such song that someone made with AI: </p>
+                <video src="eurobeat.mp4" width="360" height="270" controls></video>
+                <p> For Github's convenience, I compressed this from 6MB to 4MB. </p>
+            </div>
+
+            <hr/>
+
+            <h4>Some Half Life content (because I like that game):</h4>
+
+            <figure>
+                <svg version="1.1" id="Half-Live_2_Logo" xmlns="http://www.w3.org/2000/svg" width="125" height="125" viewBox="0 0 370 320">
+                    <title>Half-Life 2 Logo</title>
+                    <desc>For more Information see: http://commons.wikimedia.org/wiki/File:Half-Life_2_Logo.svg</desc>
+                    <path fill="#ff6000" d="M148.984,10.378c28.292-2.092,60.246-0.947,92.846-0.947c29.215,0,67.794-4.206,88.109,3.79     c18.095,7.122,32.394,22.523,29.37,49.265c-1.518,13.418-10.561,27.648-15.159,38.844c-15.217,37.058-32.812,79.412-47.37,114.636     c-22.42,54.242-73.281,97.021-149.691,91.9c-41.429-2.779-74.371-23.248-96.636-46.424c-23.404-24.363-40.738-57.709-40.738-102.32     c0-42.795,17.851-77.686,40.738-102.321C72.858,32.686,105.273,13.61,148.984,10.378 M323.307,46.379     c2.555-26.637-39.369-29.095-38.844-0.947h14.211c-2.135-12.303,9.656-12.044,11.369-3.79c3.631,17.5-32.326,31.788-26.527,53.055     c13.622-0.042,27.428-0.269,39.791,0.947c1.48-2.172,1.48-9.196,0-11.369h-24.633C305.68,73.714,321.764,62.468,323.307,46.379      M72.243,73.854c-17.719,18.101-31.533,40.191-34.107,72.003c-4.841,59.829,25.983,97.852,58.74,117.479     c33.944,20.338,81.501,23.41,119.373,2.842c34.803-18.899,56.164-49.133,62.529-87.161c7.796-46.582-13.714-89.051-36.949-109.9     C220.669,50.13,189.321,33.98,144.246,38.8C111.955,42.252,88.753,56.987,72.243,73.854"/>
+                    <path fill="#ff6000" d="M118.666,70.064h43.581c15.314,44.688,33.953,86.053,49.266,130.743c8.193-1.912,15.589-4.622,22.737-7.579     c4.533,6.835,5.214,17.524,9.475,24.633c-15.107,7.315-33.225,11.621-51.16,16.106c-8.843-27.16-20.003-52.001-29.37-78.636     c-16.864,22.928-30.968,48.614-47.371,72.003H83.612c-0.297-4.498,3.277-9.268,5.685-13.264c18.61-30.885,40.048-65.68,58.74-97.583     c-1.638-7.837-5.489-13.46-7.58-20.843h-21.79V70.064z"/>
+                </svg>
+                <figcaption>Half-Life 2 Logo</figcaption>
+            </figure>
+
+            <div>
+                <q>
+                    Rise and shine, Mr. Freeman. Rise and shine. <br/>
+                    Not that I wish to imply you have been sleeping on the job. <br/>
+                    No one is more deserving of a rest. And all the effort in the world would have gone to waste until...well, let's just say your hour has come again. <br/>
+                    The right man in the wrong place can make all the difference in the world. <br/>
+                    So, wake up, Mr. Freeman. Wake up and smell the ashes. 
+                </q>
+                <a href="https://combineoverwiki.net/wiki/The_G-Man/Quotes" target="_blank">
+                    - Gman.
+                </a>
+            </div>
+
+            <br/>
+
+            <audio src="Gman_wellshit.ogg" controls>Well...</audio>
+        </aside>
+    </main>
+    <footer>
+        <hr/>
+        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">&copy; 1990 cuz it looks old, My Website</a>
+    </footer>
+  </body>
+</html>
