--- a/Second Year/Second Semester/Web Programming/1/index.html
+++ b/Second Year/Second Semester/Web Programming/1/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html" target="_blank">Home</a></li>
                 <li><a href="https://google.ro" target="_blank"> The place where you most likely came from (Gugăl). </a></li>
+                <li><a href="#halflife" target="_self">Go to Half Life.</a></li>
             </ul>
         </nav>
     </header>
@@ -70,7 +71,7 @@
 
             <hr/>
 
-            <h4>Some Half Life content (because I like that game):</h4>
+            <h4 id="halflife">Some Half Life content (because I like that game):</h4>
 
             <figure>
                 <svg version="1.1" id="Half-Live_2_Logo" xmlns="http://www.w3.org/2000/svg" width="125" height="125" viewBox="0 0 370 320">
