--- a/Second Year/Second Semester/Web Programming/3/index.html
+++ b/Second Year/Second Semester/Web Programming/3/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/navbar/emag-logo.css">
         <link rel="stylesheet" href="css/navbar/searchbar.css">
         <link rel="stylesheet" href="css/navbar/extras.css">
+        <link rel="stylesheet" href="css/navbar/rainbow.css">
+        <link rel="stylesheet" href="css/content/megamenu.css">
         <link rel="icon" sizes="any" type="image/png" href="images/favicon.ico">
     </head>
     <body>
@@ -70,12 +72,76 @@
             </div>
         </nav>
         <!-- Rainbow navbar bellow main. -->
-        <nav>
-
+        <nav class="navbar navbar-aux">
+            <div class="container">
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="active navbar-aux-content">
+                        Produse
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-left">
+                    <li> Genius Deals </li>
+                    <li> Genius </li>
+                    <li> Rabla </li>
+                    <li> Resigilate </li>
+                    <li> Cardul cu milioane de idei </li>
+                    <li> Ofertele eMAG </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li> eMAG Help </li>
+                </ul>
+            </div>
         </nav>
         <!-- Main content. -->
         <main>
+            <!-- Side megamenu -->
+            <div class="megamenu-container megamenu-always-open">
+                <div class="megamenu">
+                    <ul class="megamenu-list">
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Laptop, Tablete &amp; Telefoane</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">PC, Periferice &amp; Software</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">TV, Audio-Video &amp; Foto</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Electrocasnice &amp; Climatizare</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Gaming, Carti &amp; Birotica</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Bacanie</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Fashion</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Ingrijire personala &amp; Cosmetice</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Casa, Gradina &amp; Bricolaj</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Sport &amp; Activitati in aer liber</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Auto, Moto  &amp; RCA</span>
+                        </li>
+                        <li class="megamenu-list-department">
+                            <span class="megamenu-list-department-name">Jucarii, Copii &amp; Bebe</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
+            <!-- Main image -->
+            <div class="container main-container-inner">
+                <img class="w-full h-full" src="images/175206.avif">
+            </div>
         </main>
     </body>
 </html>
