--- a/Second Year/Second Semester/Web Programming/6/index.html
+++ b/Second Year/Second Semester/Web Programming/6/index.html
@@ -7,6 +7,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+    <h1>Task:</h1>
+    <pre>
+        Write a web page which contains a table with 5 lines and 5 columns.
+        Besides these 5 columns there are 2 special columns, one on the left side and another one on the right side containing buttons.
+        If the user clicks on a button from the left column, the row of the table which contains that button will be deleted and all the rows above that row will be shifted down with one row.
+        If the user clicks on a button from the right column, a new editable table row is added just bellow the current row.
+        The user can edit this row and if all the cells from this row are filled with data, the row becomes read-only (like the rest of the rows in the table).
+    </pre>
     <table id="editableTable">
         <!-- Header -->
         <thead>
@@ -78,13 +86,16 @@
             $(this).closest('tr').remove();
         });
 
-        // Add new row when right button is clicked
-        $('#editableTable').on('click', '.add-row', function() {
+        // Add new row under the current row when right button is clicked
+        $('#editableTable').on('click', '.add-row', function(event) {
             const newRow = $('<tr>');
             newRow.append('<td><button class="delete-row">Delete</button></td>');
             newRow.append('<td><input type="text"></td>'.repeat(5)); // 5 editable cells
-            newRow.append('<td><button class="save-row">Save</button></td>');
-            $('#editableTable tbody').append(newRow);
+            newRow.append('<td><button class="add-row">Add</button></td>');
+            newRow.append('</td>');
+            // event.currentTarget.parentElement.parentElement.insertAdjacentHTML("afterEnd", newRow.html());
+            $(this).closest('tr').after(newRow);
+            // $('#editableTable tbody').append(newRow); - only at the end of the table.
         });
 
         // Make row read-only when all cells are filled
